--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,19 @@
 {
 	// ...
 	"compilerOptions": {
+		"target": "es2020",
 		"module": "esnext",
-		"lib": ["esnext", "dom", "dom.iterable"],
-		"types": ["@webgpu/types"]
+		"lib": ["es2020", "dom", "dom.iterable"],
+		"types": ["@webgpu/types"],
+		"strict": true,
+		"downlevelIteration": true,
+		"skipLibCheck": true,
+		"moduleResolution": "bundler",
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true
 	},
 	"include": ["src/**/*"]
 }
